--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,6 @@
-# Netlify configuration file
-
 [build]
-  publish = "dist"
-  command = "npm run build"
-
-[dev]
-  command = "npm run dev"
-  port = 8888
-  publish = "dist"
-
-[build.environment]
-  NODE_VERSION = "20"
+  publish = "."
+  command = ""
 
 [[redirects]]
   from = "/*"
